--- a/Dockerfile.scoring
+++ b/Dockerfile.scoring
@@ -1,7 +1,6 @@
 FROM rocker/tidyverse:3.6.2
 
-WORKDIR /
-COPY bin/run_scoring.R run_scoring.R
-COPY R/scoring.R scoring.R
+COPY bin/run_scoring.R /run_scoring.R
+COPY R/scoring.R /scoring.R
 
-ENTRYPOINT [ "Rscript", "/run_scoring.R" ]
+ENTRYPOINT [ "Rscript", "/run_scoring.R", "submission.json", "goldstandard.json", "/output/score.json"]
